<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="card_number">Enter 16-digit card number</string>
    <string name="internet_not_avalable">You have not internet connection</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="show_password">Show Password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="create_an_account">New User ? Register Now</string>
    <string name="retrive_your_password">Retrieve Your Password</string>
    <string name="please_provide_your_registered_email">Please Provide registered email to retrieve your password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="allready_have_an_account">Already have an account ?</string>
    <string name="new_user_signup">New user ? Sign Up</string>
    <string name="hint_last">Last Name</string>
    <string name="required">Required</string>
    <string name="correct_email">Enter a valid email id </string>
    <string name="password_length">Password should be atleast 6 characters</string>
    <string name="password_Required">Please enter password </string>
    <string name="hint_fname">First Name</string>
    <string name="my_cart_message">Your Cart is Empty !</string>
    <string name="continue_shoping">Continue Shopping</string>
    <string name="home">HOME</string>
    <string name="choose_store">Choose store</string>
    <string name="downloadable_text">Choose items to download : </string>
    <string name="search">SEARCH</string>
    <string name="account">ACCOUNT</string>
    <string name="cart">CART</string>
    <string name="search_s">Search</string>
    <string name="account_s">Account</string>
    <string name="cart_s">Cart</string>
    <string name="home_s">Home</string>
    <string name="total">Total</string>
    <string name="check_out">Proceed To Checkout</string>
    <string name="product_name_mycart">Product name in my cart</string>
    <string name="feature_product_text">FEATURED PRODUCTS</string>
    <string name="related_product_text">RELATED PRODUCTS</string>
    <string name="new_product_text">NEW PRODUCTS</string>
    <string name="selling_price">Selling price</string>
    <string name="price">Price</string>
    <string name="special_price">Special Price</string>
    <string name="pdp_specifications">PRODUCT SPECIFICATIONS</string>
    <string name="description_header">DESCRIPTION</string>
    <string name="description_value">Description value</string>
    <string name="product_options_header">PRODUCT OPTIONS</string>
    <string name="products_text">Products</string>
    <string name="additional_information">Additional Information</string>
    <string name="configurable_message">Please Select from above options</string>
    <string name="still_loading_detail">Item Still Loading !</string>
    <string name="item_already_added">Item already added</string>
    <string name="one_downloadable_allowed">Please complete this order before ordering other items.</string>
    <string name="back_to_exit">Please click BACK again to exit</string>
    <string name="check_out_as_guest_or_register_or_login">Login or Register</string>
    <string name="check_out_continue">Continue</string>
    <string name="radio_btn_signin">Sign In</string>
    <string name="radio_btn_create_account">Create An Account</string>
    <string name="radio_btn_as_guest">Checkout As Guest</string>
    <string name="please_fill_the_form">Please fill the form to complete your order</string>
    <string name="billing_address">Billing Address</string>
    <string name="enter_state">State</string>
    <string name="state">State</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="you_are_exceeded_number_products">You have exceeded number of products</string>
    <string name="least_quantity_selected">Minimum quantity selected, click delete to remove item.</string>
    <string name="add_item_to_it_now">Add item to it now?</string>
    <string name="in_stock">In stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="grouped">Grouped</string>
    <string name="item_already_added_to_cart">Item is already added</string>
    <string name="enter">Enter</string>
    <string name="please_select">Please Select a Payment Method</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_googleplus">Login with Google+</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_">Edit</string>
    <string name="shiping_address">Shipping Address</string>
    <string name="change_passsword">Change password</string>
    <string name="logout">LOGOUT</string>
    <string name="my_order">MY ORDERS</string>
    <string name="update_">Update</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass_length_must_be_more_than_six">Password must have minimum 6 character</string>
    <string name="blank_entry">Please  fill the above text</string>
    <string name="botth_pass_must_be_same">New password and confirm password is not same</string>
    <string name="no_default_address_found">No default address found</string>
    <string name="billing_shipping_same">Billing  &amp; Shipping Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="discount_code">Discount Codes</string>
    <string name="enter_your_coupon_code">Enter your coupon code if you have one</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="proceed">Proceed</string>
    <string name="payment_information">Payment information</string>
    <string name="submit">Submit</string>
    <string name="please_enter_coupon">Please Enter Code</string>
    <string name="invalidCoupon">(%1$s) is invalid</string>
    <string name="select_payment">Select Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="thank_you_for_placing_order">Thank you for placing your order with us.We will do our best to deliver it to below address.</string>
    <string name="Discount">Discount</string>
    <string name="Select">Select %1$s</string>
    <string name="search_hint">Search Products</string>
    <string name="google_plus_failed">Google+ login failed</string>
    <string name="slogan">Accept Payments. Anywhere</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="card_number_hint">16-digit number</string>
    <string name="cvv_hint">3-digit number</string>
    <string name="zipcode_hint">5-digit number</string>
    <string name="error_message">This field is required.</string>
    <string name="card_length_error_message">Enter a 16-digit number.</string>
    <string name="invalid_card_error_message">Invalid card number.</string>
    <string name="valid_card_message">Valid card number.</string>
    <string name="cvv_length_error_message">Enter a 3-digit number.</string>
    <string name="zipcode_length_error_message">Enter a 6-digit number.</string>
    <string name="invalid_expDate_message">Expired Card.</string>
    <string name="make_transaction">Confirm and Pay</string>
    <string name="cvv_number">Security Code</string>
    <string name="exp_date">Expiration Date</string>
    <string name="zipcode">Zipcode</string>
    <string name="recycler_view_transactionID_text">Transaction ID: </string>
    <string name="recycler_view_amount_text">Amount</string>
    <string name="recycler_view_line">Recycler View Line</string>
    <string name="refund_button_text">REFUND</string>
    <string name="void_button_text">VOID</string>
    <string name="voided_text">Voided</string>
    <string name="refunded_text">Refunded</string>
    <string name="snackbar_text_successful_refund">Transaction successfully refunded</string>
    <string name="snackbar_text_successful_void">Transaction successfully voided</string>
    <string name="snackbar_text_unsuccessful_void">Unable to void transaction</string>
    <string name="snackbar_text_unsuccessful_refund">Unable to refund transaction</string>
    <string name="snackbar_text_successful_transaction">Transaction was successful</string>
    <string name="snackbar_text_no_network_connection">No network connection</string>
    <string name="snackbar_text_failed_load_transactions">Unable to load transactions</string>
    <string name="snackbar_action_refresh">REFRESH</string>
    <string name="snackbar_action_retry">RETRY</string>
    <string name="dialog_title_login_error">Login Error</string>
    <string name="dialog_message_login_error">The username or password you have entered is incorrect. Please check your entries and try again.</string>
    <string name="dialog_title_transaction_not_refunded">Refund Unsuccessful</string>
    <string name="dialog_title_transaction_not_voided">Void Unsuccessful</string>
    <string name="dialog_title_transaction_unsuccessful">Transaction Unsuccessfull</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_unknown_error">Unknown Error</string>
    <string name="dialog_message_check_unsettled_transactions">Please check your unsettled transactions.</string>
    <string name="dialog_message_invalid_field">One or more of the fields you have entered is incorrect. Please check your entries and try again.</string>
    <string name="dialog_message_unknown_error">An unknown error has occurred. </string>
    <string name="progress_dialog_title_please_wait">Please wait . . . </string>
    <string name="progress_dialog_message_processing_transaction">Processing Transaction . . .</string>
    <string name="dialog_title_session_expired">Session Expired</string>
    <string name="dialog_message_session_expired">Your session has expired. Please login again.</string>
    <string name="dialog_session_expired_yes_choice">Login</string>
    <string name="manu_rateapp">Rate this app</string>
    <string name="about_us">About Us</string>
    <string name="term_condition">Term and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_privacy_policy">Return Privacy Policy</string>
    <string name="menu_wishlist">WishList</string>
    <string name="enter_coupon">Enter Coupon</string>
    <string name="txt_a_z">Product Name (A-Z)</string>
    <string name="txt_z_a">Product Name (Z-A)</string>
    <string name="txt_price_l_h">Price (Low-High)</string>
    <string name="txt_price_high_low">Price (High-Low)</string>
    <string name="choose_currency" translatable="false">Change Currency</string>
    <string name="subtitle_text" translatable="false">Preview and manage your app</string>
    <string name="id_text" translatable="false">Enter your email id</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="login_button_text" translatable="false">Login to your store</string>
    <string name="dont_have_account_text" translatable="false">Don\'t have account?</string>
    <string name="see_demo_text" translatable="false">See a Demo</string>
    <string name="forgot_password_text" translatable="false">Forgot your password?</string>
    <string name="agreement_text" translatable="false">By logging in you agree to our </string>
    <string name="privacy_policy_text" translatable="false">Privacy Policies</string>
    <string name="forgot_password_header1" translatable="false">Please provide registered email id to retrive your password</string>
</resources>