<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custome_dot_border"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount_code"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/font_size_level_one"
        android:textColor="@color/font_black_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_coupon_code"
        android:textSize="@dimen/font_size_level_two"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:layout_marginTop="15dp"
        android:textColor="@color/font_color_black_light"/>
    <EditText
        android:id="@+id/edt_coupan_code"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_coupon"
        android:paddingStart="5dp"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:singleLine="true"
        android:background="@drawable/custome_rectangle_border"/>
    <TextView
        android:id="@+id/txtV_apply_coupan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_coupon"
        android:textSize="@dimen/font_size_level_two"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:padding="6dp"
        android:layout_marginTop="25dp"
        android:background="@color/pdp_btn_color"
        android:textColor="@color/bg_white"
       />
</LinearLayout>