<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_back_ground_color"
    android:padding="@dimen/layout_padding">
    <TextView
        android:id="@+id/preview_and_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textSize="@dimen/forgot_pass_header_text_size"
        android:textAlignment="center"
        android:textColor="@color/subtitle_text_color"
        android:layout_marginTop="@dimen/forgot_pass_top_margin"
        />
    <TextView
        android:id="@+id/forgot_password_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_header1"
        android:textSize="@dimen/login_button_text_size"
        android:textAlignment="center"
        android:textColor="@color/subtitle_text_color"
        android:layout_marginTop="@dimen/sub_tv_forgot_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/sub_tv_margin"
        android:background="@color/white_smoke">
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_hieght"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/id_password_text_size"
            android:textColor="@color/id_password_text_color"
            android:hint="@string/id_text"
            android:textAlignment="textStart"
            android:background="@drawable/border_pdp_rectangle"
            android:padding="@dimen/tv_padding"/>

    </LinearLayout>



    <Button
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrive_your_password"
        android:textSize="@dimen/login_button_text_size"
        android:background="@color/login_button_background_color"
        android:textColor="@color/login_button_text_color"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/tv_login_button_margin"/>

</LinearLayout>