<?xml version="1.0" encoding="utf-8"?>
<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    >

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp"
              >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/new_user_signup"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/font_size_heading"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/input_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_level_two"
                        android:hint="@string/hint_fname"
                        android:textDirection="anyRtl"
                        android:textAlignment="viewStart"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/input_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_level_two"
                        android:hint="@string/hint_last"
                        android:textDirection="anyRtl"
                        android:textAlignment="viewStart"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_level_two"
                        android:hint="@string/hint_email"
                        android:textDirection="anyRtl"
                        android:textAlignment="viewStart"

                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_level_two"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textDirection="anyRtl"
                        android:textAlignment="viewStart"
                        />
                </android.support.design.widget.TextInputLayout>
                <CheckBox
                    android:id="@+id/ch_box_show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:padding="0dp"
                    android:scaleX=".9"
                    android:scaleY=".9"
                    android:textSize="@dimen/font_size_level_two"/>
                <TextView android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_app_txt_btn"
                    android:text="@string/sign_up_now"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top_app_text_btn"
                    android:background="@color/btn_buy_now"
                    android:textSize="@dimen/font_size_level_one"
                    android:textColor="@color/bg_white"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/allready_have_an_account"
                        android:textColor="@color/font_black_color"
                        android:textSize="@dimen/font_size_level_two"/>
                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:text="@string/login"
                        android:textColor="@color/font_black_color"
                        android:textSize="@dimen/font_size_level_two"/>




                </LinearLayout>

            </LinearLayout>
</ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>