<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_grey_color">
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_a_z"
        android:id="@+id/tvNameAZ"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:button="@drawable/sort_radiobtn_selector"
        android:textSize="@dimen/font_size_level_two"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:textColor="@color/font_black_color"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_black"></View>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_z_a"
        android:id="@+id/tvNameZA"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:button="@drawable/sort_radiobtn_selector"
        android:textSize="@dimen/font_size_level_two"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:textColor="@color/font_black_color"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_black"></View>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_price_l_h"
        android:id="@+id/txtPriceLH"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:button="@drawable/sort_radiobtn_selector"
        android:textSize="@dimen/font_size_level_two"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:textColor="@color/font_black_color"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_black"></View>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_price_high_low"
        android:id="@+id/txtPriceHL"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        android:paddingStart="10dp"
        android:button="@drawable/sort_radiobtn_selector"
        android:textSize="@dimen/font_size_level_two"
        android:textColor="@color/font_black_color"
        />
</LinearLayout>
